<resources>
    <string name="app_name">ODF Firefighter Sizeup</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fire_number">Fire #</string>
    <string name="legal_description">Legal Description</string>
    <string name="fire_name">Fire Name</string>
    <string name="incident_commander">Incident Commander</string>
    <string name="latitude_and_longitude">Latitude and Longitude</string>
    <string name="spread_potential">Spread Potential</string>
    <string name="incident_status_colon">Incident Status:</string>
    <string name="incident_size_colon">Incident Size:</string>
    <string name="slope_colon">Slope:</string>
    <string name="submit">Submit</string>
    <string name="grass">Grass</string>
    <string name="brush">Brush</string>
    <string name="timber">Timber</string>
    <string name="slash">Slash</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="contained">Contained</string>
    <string name="creeping">Creeping</string>
    <string name="running">Running</string>
    <string name="spotting">Spotting</string>
    <string name="crowning">Crowning</string>
    <string name="smoldering">Smoldering</string>
    <string name="fuel_type">Fuel type</string>
    <string name="FireDrawerLabel">Fire Size-Up Report</string>
    <string name="spot">Spot</string>
    <string name="flat_0">Flat (~0%)</string>
</resources>
