<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.firefightergarrett.odffirefightersizeup.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etFireNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/fire_number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etLegalDescription"
        android:hint="@string/legal_description"
        android:layout_below="@+id/etCommander"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etCommander"
        android:layout_alignEnd="@+id/etCommander" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etFireName"
        android:hint="@string/fire_name"
        android:layout_alignTop="@+id/etFireNumber"
        android:layout_toRightOf="@+id/etFireNumber"
        android:layout_toEndOf="@+id/etFireNumber" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etCommander"
        android:hint="@string/incident_commander"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/etFireName"
        android:layout_toEndOf="@+id/etFireName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etLatLon"
        android:hint="@string/latitude_and_longitude"
        android:layout_below="@+id/etLegalDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spread_potential"
        android:id="@+id/tvSpread"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/etFireName"
        android:layout_toEndOf="@+id/etFireName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/incident_status_colon"
        android:id="@+id/tvIncidentStatus"
        android:layout_below="@+id/etLatLon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/incident_size_colon"
        android:id="@+id/tvIncidentSize"
        android:layout_below="@+id/cbGroupStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbSizeProgress"
        android:layout_below="@+id/tvIncidentSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvSizeProgress"
        android:text="Spot"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/tvSpread"
        android:layout_alignEnd="@+id/tvSpread" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/slope_colon"
        android:id="@+id/tvSlope"
        android:layout_below="@+id/sbSizeProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Flat (0%)"
        android:layout_below="@+id/sbSizeProgress"
        android:layout_alignLeft="@+id/tvSizeProgress"
        android:layout_alignStart="@+id/tvSizeProgress"
        android:id="@+id/tvSlopeProgress" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/tvSlope"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/sbSizeProgress"
        android:layout_alignEnd="@+id/sbSizeProgress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/incident_status"
        android:id="@+id/textView2"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/bSubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:id="@+id/rbGroupStatus">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grass"
            android:id="@+id/rbStatusGrass" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush"
            android:id="@+id/rbStatusBrush" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinder"
            android:id="@+id/rbStatusTinder" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:id="@+id/rbStatusSlash" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSpread"
        android:layout_alignLeft="@+id/tvSpread"
        android:layout_alignStart="@+id/tvSpread"
        android:layout_alignRight="@+id/tvSpread"
        android:layout_alignEnd="@+id/tvSlopeProgress"
        android:id="@+id/rbGroupSpread">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:id="@+id/rbSmSpread" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/rbMedSpread" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:id="@+id/rbLgSpread" />

    </RadioGroup>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvIncidentStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_above="@+id/tvSizeProgress"
        android:id="@+id/cbGroupStatus">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contained"
            android:id="@+id/cbIncidentContain"
            android:layout_row="0"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creeping"
            android:id="@+id/cbIncidentCreep"
            android:layout_row="0"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:id="@+id/cbIncidentRun"
            android:layout_row="0"
            android:layout_column="2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotting"
            android:id="@+id/cbIncidentSpot"
            android:layout_row="1"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crowning"
            android:id="@+id/cbIncidentCrown"
            android:layout_row="1"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoldering"
            android:id="@+id/cbIncidentSmold"
            android:layout_row="1"
            android:layout_column="2" />
    </GridLayout>

</RelativeLayout>
